add steps in building