@@ -3,11 +3,6 @@ package com.example.superheroes.antiHero.controller;
 import com.example.superheroes.antiHero.dto.AntiHeroDto;
 import com.example.superheroes.antiHero.entity.AntiHeroEntity;
 import com.example.superheroes.antiHero.service.AntiHeroService;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-import javax.validation.Valid;
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
@@ -16,66 +11,71 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
+import javax.validation.Valid;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
 @Log4j2
 @AllArgsConstructor
 @RestController
 @RequestMapping("api/v1/anti-heroes")
-@PreAuthorize("isAuthenticated()")
+@PreAuthorize("isAuthenticated()") // for authorization
 public class AntiHeroController {
 
-  private final AntiHeroService service;
-  private final ModelMapper mapper;
+    private final AntiHeroService service;
+    private final ModelMapper mapper;
 
-  @GetMapping
-  public List<AntiHeroDto> getAntiHeroes() {
-    // Mapstruct is another dto mapper, but it's not straight forward
-    var antiHeroList = StreamSupport
-      .stream(service.findAllAntiHeroes().spliterator(), false)
-      .collect(Collectors.toList());
+    @GetMapping
+    public List<AntiHeroDto> getAntiHeroes() {
+        // Mapstruct is another dto mapper, but it's not straight forward
+        var antiHeroList = StreamSupport
+                .stream(service.findAllAntiHeroes().spliterator(), false).toList();
 
-    return antiHeroList
-      .stream()
-      .map(this::convertToDto)
-      .collect(Collectors.toList());
-  }
+        return antiHeroList
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
 
-  @GetMapping("/{id}")
-  public AntiHeroDto getAntiHeroById(@PathVariable("id") UUID id) {
-    return convertToDto(service.findAntiHeroById(id));
-  }
+    @GetMapping("/{id}")
+    public AntiHeroDto getAntiHeroById(@PathVariable("id") UUID id) {
+        return convertToDto(service.findAntiHeroById(id));
+    }
 
-  @DeleteMapping("/{id}")
-  public void deleteAntiHeroById(@PathVariable("id") UUID id) {
-    service.removeAntiHeroById(id);
-  }
+    @DeleteMapping("/{id}")
+    public void deleteAntiHeroById(@PathVariable("id") UUID id) {
+        service.removeAntiHeroById(id);
+    }
 
-  @PostMapping
-  public AntiHeroDto postAntiHero(@Valid @RequestBody AntiHeroDto antiHeroDto) {
-    var entity = convertToEntity(antiHeroDto);
-    var antiHero = service.addAntiHero(entity);
+    @PostMapping
+    public AntiHeroDto postAntiHero(@Valid @RequestBody AntiHeroDto antiHeroDto) {
+        var entity = convertToEntity(antiHeroDto);
+        var antiHero = service.addAntiHero(entity);
 
-    return convertToDto(antiHero);
-  }
+        return convertToDto(antiHero);
+    }
 
-  @PutMapping("/{id}")
-  public void putAntiHero(
-    @PathVariable("id") UUID id,
-    @Valid @RequestBody AntiHeroDto antiHeroDto
-  ) {
-    if (!id.equals(antiHeroDto.getId())) throw new ResponseStatusException(
-      HttpStatus.BAD_REQUEST,
-      "id does not match"
-    );
+    @PutMapping("/{id}")
+    public void putAntiHero(
+            @PathVariable("id") UUID id,
+            @Valid @RequestBody AntiHeroDto antiHeroDto
+    ) {
+        if (!id.equals(antiHeroDto.getId())) throw new ResponseStatusException(
+                HttpStatus.BAD_REQUEST,
+                "id does not match"
+        );
 
-    var antiHeroEntity = convertToEntity(antiHeroDto);
-    service.updateAntiHero(id, antiHeroEntity);
-  }
+        var antiHeroEntity = convertToEntity(antiHeroDto);
+        service.updateAntiHero(id, antiHeroEntity);
+    }
 
-  private AntiHeroDto convertToDto(AntiHeroEntity entity) {
-    return mapper.map(entity, AntiHeroDto.class);
-  }
+    private AntiHeroDto convertToDto(AntiHeroEntity entity) {
+        return mapper.map(entity, AntiHeroDto.class);
+    }
 
-  private AntiHeroEntity convertToEntity(AntiHeroDto dto) {
-    return mapper.map(dto, AntiHeroEntity.class);
-  }
+    private AntiHeroEntity convertToEntity(AntiHeroDto dto) {
+        return mapper.map(dto, AntiHeroEntity.class);
+    }
 }
